# txt-summarization

./: Dockerfile  README.md  fast_api.py  pyproject.toml  stream_lit.py
datasets/: example-llm.txt  example-openai.txt
